user view complete

--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -4,4 +4,10 @@
   .listContainer {
     flex: 6;
   }
+  .listHeading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
+
