--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -74,5 +74,13 @@
       border: 1px dotted rgba(220, 20, 60, 0.6);
       cursor: pointer;
     }
+
+    .selectButton {
+      padding: 2px 5px;
+      border-radius: 5px;
+      color: rgb(11, 216, 52);
+      border: 1px solid rgba(11, 216, 52);
+      cursor: pointer;
+    }
   }
 }
